# VMC_Quadruped_Uika

./: CLAUDE.md  README.md  motor_cmd.yaml
install/: local_setup.sh  setup.sh
install/description/share/description/: package.sh  package.xml
install/estimation/include/estimation/: gm_observer.hpp  leg_kinematics.hpp  types.hpp
install/estimation/share/ament_index/resource_index/package_run_dependencies/: estimation
install/estimation/share/estimation/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/estimation/share/estimation/cmake/: estimationConfig.cmake
install/interfaces/include/interfaces/interfaces/msg/: base_state.hpp  contact_state.h  gait_phase.hpp  motor_command12.h  motor_feedback.h  motor_feedback.hpp
install/interfaces/include/interfaces/interfaces/msg/detail/: base_state__functions.c  base_state__functions.h  base_state__rosidl_typesupport_fastrtps_c.h  base_state__rosidl_typesupport_fastrtps_cpp.hpp  base_state__rosidl_typesupport_introspection_c.h  base_state__struct.hpp  base_state__type_support.cpp  base_state__type_support.h  contact_state__functions.c  contact_state__type_support.c  contact_state__type_support.h  foot_state__functions.c  foot_state__rosidl_typesupport_fastrtps_cpp.hpp  foot_state__struct.hpp  foot_state__type_support.h  gait_phase__functions.c  gait_phase__rosidl_typesupport_introspection_cpp.hpp  gait_phase__type_support.hpp  motion_command__functions.c  motion_command__rosidl_typesupport_fastrtps_c.h  motion_command__rosidl_typesupport_introspection_cpp.hpp  motion_command__struct.hpp  motion_command__type_support.c  motion_command__type_support.cpp  motion_command__type_support.h  motor_command12__builder.hpp  motor_command12__rosidl_typesupport_fastrtps_c.h  motor_command12__rosidl_typesupport_introspection_c.h  motor_command12__struct.h  motor_command12__type_support.cpp  motor_command__type_support.cpp  motor_feedback12__functions.c  motor_feedback12__functions.h  motor_feedback12__rosidl_typesupport_fastrtps_cpp.hpp  motor_feedback12__rosidl_typesupport_introspection_c.h  motor_feedback12__type_support.cpp  motor_feedback12__type_support.h  motor_feedback12__type_support.hpp  motor_feedback__functions.c  motor_feedback__rosidl_typesupport_introspection_cpp.hpp  (+6 more)
install/interfaces/local/lib/python3.10/dist-packages/interfaces/msg/: _base_state_s.c  _motor_command12_s.c  _motor_feedback12.py  _motor_feedback_s.c  _single_foot_state.py
install/interfaces/share/interfaces/: package.sh  package.xml
install/interfaces/share/interfaces/msg/: ContactState.idl  MotorFeedback.idl  SingleFootState.msg
install/interfaces/share/interfaces/rust/: Cargo.toml
install/interfaces/share/interfaces/rust/src/msg/: rmw.rs
install/main_control/share/main_control/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rs_motor_ros2/include/motor_ros2/: motor_cfg.h
install/rs_motor_ros2/lib/rs_motor_ros2/: rs_motor_ros2
install/rs_motor_ros2/share/ament_index/resource_index/parent_prefix_path/: rs_motor_ros2
install/rs_motor_ros2/share/rs_motor_ros2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rs_motor_ros2/share/rs_motor_ros2/cmake/: rs_motor_ros2Config.cmake
install/sim/share/sim/: package.sh  package.xml
install/sim/share/sim/config/: sim_params.yaml
install/sim/share/sim/launch/: sim.launch.py
install/xbox/lib/xbox/: xbox_vel_publisher
install/xbox/share/xbox/: package.dsv  package.ps1  package.sh
install/xbox/share/xbox/launch/: xbox.launch.py
log/: latest_build
rl_sar-main/: CLAUDE.md  README.md  UIKA_DEPLOY_README.md
rl_sar-main/policy/uika/: base.yaml
rl_sar-main/policy/uika/himloco/: config.yaml  uika_20260410_144633_model_auto.onnx
rl_sar-main/scripts/: setup_env.sh
rl_sar-main/src/rl_sar/: CMakeLists.txt
rl_sar-main/src/rl_sar/fsm_robot/: fsm_all.hpp  fsm_uika.hpp
rl_sar-main/src/rl_sar/include/: rl_real_uika.hpp
rl_sar-main/src/rl_sar/launch/: uika_test.launch.py
rl_sar-main/src/rl_sar/src/: rl_real_uika.cpp  uika_mock_publisher.cpp
src/Control/: CMakeLists.txt  package.xml
src/Description/: CMakeLists.txt  package.xml
src/Estimation/: CMakeLists.txt  package.xml
src/Interfaces/: CMakeLists.txt  package.xml
src/MainControl/: CMakeLists.txt  package.xml
src/description/UIKA/mjcf/: uika.xml
src/estimation/: CMakeLists.txt  README.md  package.xml
src/estimation/include/estimation/: contact_detection_node.hpp  leg_dynamics.hpp
src/estimation/src/: contact_detection_node.cpp  gm_observer.cpp  leg_dynamics.cpp  main.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/foxglove_bridge/share/foxglove_bridge/: package.bash  package.zsh
src/interfaces/: CMakeLists.txt
src/interfaces/install/: local_setup.sh  setup.sh
src/interfaces/install/Interfaces/share/Interfaces/: package.bash  package.zsh
src/interfaces/install/interfaces/include/interfaces/interfaces/msg/: contact_state.hpp  foot_state.h  motion_command.h
src/interfaces/install/interfaces/include/interfaces/interfaces/msg/detail/: base_state__traits.hpp  contact_state__rosidl_typesupport_introspection_cpp.hpp  foot_state__type_support.hpp  (+11 more)
src/interfaces/install/interfaces/share/ament_index/resource_index/rosidl_interfaces/: interfaces
src/interfaces/install/interfaces/share/interfaces/: local_setup.sh  package.sh  package.xml
src/interfaces/install/interfaces/share/interfaces/msg/: ContactState.msg  GaitPhase.idl  MotorCommand.msg
src/interfaces/log/: latest_build
src/interfaces/msg/: BaseState.msg  GaitPhase.msg  MotorCommand12.msg
src/log/: latest_build
src/main_control/: CMakeLists.txt
src/main_controller/: CMakeLists.txt  package.xml
src/robstride_ros_sample/: CLAUDE.md  CMakeLists.txt  README.md  package.xml  setup_can.sh
src/robstride_ros_sample/src/: main.cpp  motor_cfg.cpp
src/xbox/: CMakeLists.txt  LICENSE  README.md  package.xml
src/xbox/launch/: xbox.launch.py
src/xbox/src/: xbox_vel_publisher.cpp
(+2 files in other folders)
