<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim</name>
  <version>1.0.0</version>
  <description>
    MuJoCo 仿真器与 ROS 2 桥接包

    功能：
    - 加载 MuJoCo MJCF 模型进行仿真
    - 提供 ROS 2 接口（话题订阅/发布）
    - 支持可视化窗口和参数配置

    适用机器人：UIKA 四足机器人（12 自由度）
  </description>

  <maintainer email="384336014@qq.com">lzh</maintainer>
  <license>Apache-2.0</license>

  <url type="website">https://github.com/uika-robot/quadruped</url>

  <!-- Python 依赖 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 核心依赖 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
