<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interfaces</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="384336014@qq.com">lzh</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- 消息依赖 -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

    <!-- 运行时依赖 -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
  <!-- 声明这是一个接口包 -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
